# design-patterns

./: README.md  pyproject.toml
creational/: __init__.py
creational/abstract_factory/: __init__.py  factories.py  matrices.py  vectors.py
creational/factory_method/: __init__.py  distance.py  main.py  taximeter.py
structural/adapter/: __init__.py  client.py  conceptual.py  linear_model.py
