[tool.poetry]
name = "design-patterns"
version = "0.1.0"
description = "This repo contains examples of software design patterns in python."
authors = ["HeberTU <heber.trj.urt@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
torch = "^1.12.1"
pandas = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
